# RepoRadar

./: .gitignore  CMakeLists.txt  README.md  main.cpp  print  print.cpp  repo.cpp  scan.cpp
data/: repos.txt
include/: calendar.h  header.h  repo.h  scan.h
script/: run.sh
